crates/cyrs-ast/tests/snapshots/snapshot__clause_match_where.snap
---
source: crates/cyrs-ast/tests/snapshot.rs
assertion_line: 215
expression: "dump(\"MATCH (n) WHERE n.age > 18 RETURN n\")"
---
SourceFile(SOURCE_FILE@0..35)
  STATEMENT@0..35
    MatchClause(MATCH_CLAUSE@0..26)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..9)
        PATTERN_PART@5..9
          NodePattern(NODE_PATTERN@5..9)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
      WhereClause(WHERE_CLAUSE@9..26)
        WHITESPACE@9..10 " "
        WHERE_KW@10..15 "WHERE"
        Expr::BinaryExpr(BINARY_EXPR@15..26)
          PROP_ACCESS_EXPR@15..21
            VAR_EXPR@15..17
              WHITESPACE@15..16 " "
              IDENT@16..17 "n"
            DOT@17..18 "."
            IDENT@18..21 "age"
          WHITESPACE@21..22 " "
          GT@22..23 ">"
          LITERAL_EXPR@23..26
            WHITESPACE@23..24 " "
            INT_LITERAL@24..26 "18"
    ReturnClause(RETURN_CLAUSE@26..35)
      WHITESPACE@26..27 " "
      RETURN_KW@27..33 "RETURN"
      RETURN_BODY@33..35
        RETURN_ITEMS@33..35
          ReturnItem(RETURN_ITEM@33..35)
            VAR_EXPR@33..35
              WHITESPACE@33..34 " "
              IDENT@34..35 "n"
