crates/cyrs-ast/tests/snapshots/snapshot__clause_return_basic.snap
---
source: crates/cyrs-ast/tests/snapshot.rs
assertion_line: 220
expression: "dump(\"RETURN 1\")"
---
SourceFile(SOURCE_FILE@0..8)
  STATEMENT@0..8
    ReturnClause(RETURN_CLAUSE@0..8)
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..8
        RETURN_ITEMS@6..8
          ReturnItem(RETURN_ITEM@6..8)
            LITERAL_EXPR@6..8
              WHITESPACE@6..7 " "
              INT_LITERAL@7..8 "1"
