crates/cyrs-ast/tests/snapshots/snapshot__clause_with_return_projection.snap
---
source: crates/cyrs-ast/tests/snapshot.rs
expression: "dump(\"MATCH (n:Person) WITH n.name AS name, n.age AS age RETURN name, age\")"
---
SourceFile(SOURCE_FILE@0..67)
  STATEMENT@0..67
    MatchClause(MATCH_CLAUSE@0..16)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..16)
        PATTERN_PART@5..16
          NodePattern(NODE_PATTERN@5..16)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            LabelExpr(LABEL_EXPR@8..15)
              COLON@8..9 ":"
              IDENT@9..15 "Person"
            R_PAREN@15..16 ")"
    WithClause(WITH_CLAUSE@16..50)
      WHITESPACE@16..17 " "
      WITH_KW@17..21 "WITH"
      RETURN_BODY@21..50
        RETURN_ITEMS@21..50
          ReturnItem(RETURN_ITEM@21..36)
            PROP_ACCESS_EXPR@21..28
              VAR_EXPR@21..23
                WHITESPACE@21..22 " "
                IDENT@22..23 "n"
              DOT@23..24 "."
              IDENT@24..28 "name"
            WHITESPACE@28..29 " "
            AS_KW@29..31 "AS"
            WHITESPACE@31..32 " "
            IDENT@32..36 "name"
          COMMA@36..37 ","
          ReturnItem(RETURN_ITEM@37..50)
            PROP_ACCESS_EXPR@37..43
              VAR_EXPR@37..39
                WHITESPACE@37..38 " "
                IDENT@38..39 "n"
              DOT@39..40 "."
              IDENT@40..43 "age"
            WHITESPACE@43..44 " "
            AS_KW@44..46 "AS"
            WHITESPACE@46..47 " "
            IDENT@47..50 "age"
    ReturnClause(RETURN_CLAUSE@50..67)
      WHITESPACE@50..51 " "
      RETURN_KW@51..57 "RETURN"
      RETURN_BODY@57..67
        RETURN_ITEMS@57..67
          ReturnItem(RETURN_ITEM@57..62)
            VAR_EXPR@57..62
              WHITESPACE@57..58 " "
              IDENT@58..62 "name"
          COMMA@62..63 ","
          ReturnItem(RETURN_ITEM@63..67)
            VAR_EXPR@63..67
              WHITESPACE@63..64 " "
              IDENT@64..67 "age"
